--- a/Parking.html
+++ b/Parking.html
@@ -255,7 +255,7 @@
         <div class="thumb">
             
             <div class="thumb1">
-                <center><h2>Parking solution</h2></center>
+                <center><h2>Parking Solutions</h2></center>
             </div>
             
             <div class="thumb2">
